# Urban-Researcher-Cli

./: README.md  cli.py  pyproject.toml  requirements.txt  도시연구CLI계획.txt  앞으로의_작업_계획서.md
logs/: chat_20250831_000833.md
urban_cli/: chat.py  config.py  gemini_client.py  llm.py  logutil.py  project.py
urban_regeneration_study/: project.json
urban_researcher_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
