[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-researcher-cli"
version = "0.1.0"
description = "AI 기반 도시 연구 자동화 CLI (가상 랩 미팅)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.3",
]
authors = [
  {name = "Urban Researcher"}
]
keywords = ["cli", "ai", "research", "urban"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
]

[project.scripts]
urban-cli = "cli:main"
Urban-cli = "cli:main"
urban = "cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["urban_cli*"]

